# jadi

./: README.md
demos/ambient_occlusion/cmake/: clean.sh
demos/ambient_occlusion/src/: Demo.cpp  Demo.h  Particles.cpp  Particles.h  SSAO.cpp  SSAO.h
demos/bloom/cmake/: CMakeLists.txt
demos/bloom/src/: Bloom.cpp  Bloom.h  BloomHelper.cpp  BloomHelper.h  Demo.cpp  Demo.h  Particles.cpp  Particles.h
demos/depth_of_field/cmake/: CMakeLists.txt
demos/depth_of_field/doc/: readme.md
demos/depth_of_field/src/: Demo.cpp  DepthOfField.cpp  DepthOfField.h  Particles.cpp  Particles.h  main.cpp
demos/empty/cmake/: CMakeLists.txt  compile.sh
demos/empty/src/: Demo.cpp  Demo.h  DepthOfField.cpp  DepthOfField.h  Particles.cpp  main.cpp
demos/fog/src/: Demo.cpp  SSAO.cpp  SSAO.h
demos/light_rays/cmake/: compile.sh
demos/light_rays/src/: Demo.cpp  Demo.h  LightRayHelper.cpp  LightRayHelper.h  LightRays.cpp  LightRays.h  main.cpp
demos/textured_obj/: .gitignore
demos/textured_obj/Debug/: demo
demos/textured_obj/cmake/: CMakeLists.txt  run.sh
demos/textured_obj/src/: Demo.cpp  Demo.h  main.cpp
jadi/include/jadi/: Camera.h  Font.h  GL.h  Image.h  Jadi.h  Math.h  OBJ.h  Utils.h
jadi/lib/win/: glfw3.lib
jadi/src/jadi/: Camera.cpp  Image.cpp  OBJ.cpp
